--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ email: bern3rsh@gmail.com
 description: ""
 keyword: ""
 url: ""              # your host, for absolute URL
-baseurl: "/blog"                      # for example, '/blog' if your blog hosted on 'host/blog'
+baseurl: ""                      # for example, '/blog' if your blog hosted on 'host/blog'
 
 
 
