--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Ben3rsH Blog
 SEOTitle: 黄新的博客 | Bern3rsH Blog
-header-img: img/home-bg.jpeg
+header-img: img/home-bg.jpg
 email: bern3rsh@gmail.com
 description: ""
 keyword: ""
