--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ sidebar-avatar: /img/avatar-bern3rsh.jpg      # use absolute URL, seeing it's us
 
 # Featured Tags
 featured-tags: true                     # whether or not using Feature-Tags
-featured-condition-size: 1              # A tag will be featured if the size of it is more than this condition value
+featured-condition-size: 0              # A tag will be featured if the size of it is more than this condition value
 
 
 
@@ -76,10 +76,10 @@ featured-condition-size: 1              # A tag will be featured if the size of 
 friends: [
     {
         title: "Bern3rsH Blog",
-        href: ""
+        href: "http://bernersh.github.io"
     }
 ]
 
 
-
 gems: [jekyll-paginate]
+
