--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ RSS: false
 weibo_username:     bern3rsh
 zhihu_username:     Bern3rsH
 github_username:    bernersh
-twitter_username:   bern3rshx
+twitter_username:   _bern3rsh
 facebook_username:  bern3rsh
 
 
