--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ kramdown:
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: “如果天空总是黑暗，那就摸黑生存；如果发出声音是危险的，那就保持沉默；如果自觉无力发光，那就别去照亮别人。但是，不要习惯了黑暗就为黑暗辩护；不要为自己的苟且而得意洋洋；不要嘲讽那些比自己更勇敢、更有热量的人们。可以卑微如尘土，不可扭曲如蛆虫。"
+sidebar-about-description: “如果天空总是黑暗，那就摸黑生存；如果发出声音是危险的，那就保持沉默；如果自觉无力发光，那就别去照亮别人。但是，不要习惯了黑暗就为黑暗辩护；不要为自己的苟且而得意洋洋；不要嘲讽那些比自己更勇敢、更有热量的人们。可以卑微如尘土，不可扭曲如蛆虫。”
 sidebar-avatar: /img/avatar-bern3rsh.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
