修改标题错误

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Ben3rsH Blog
+title: Bern3rsH Blog
 SEOTitle: 黄新的博客 | Bern3rsH Blog
 header-img: img/home-bg.jpeg
 email: bern3rsh@gmail.com
